nothing to commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockeys-HERO</title>
-    <link rel="icon" type="image/x-icon" href="/images/hockey9.png">
+    <link rel="shortcut icon" href="Images/hockey9.png" type="image/x-icon">
     <!-- daisy UI install link -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -150,19 +150,19 @@
                 <div class="flex flex-col items-center gap-5">
                     <div class="radial-progress text-[#49D293] text-2xl font-extrabold"
                         style="--value:95; --size:8rem; --thickness: .8rem;" role="progressbar">95%</div>
-                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <h4 class="text-xl font-semibold">Experienced Coach</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
                 <div class="flex flex-col items-center gap-5">
                     <div class="radial-progress text-[#FFB546] text-2xl font-extrabold"
                         style="--value:90; --size:8rem; --thickness: .8rem;" role="progressbar">90%</div>
-                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <h4 class="text-xl font-semibold">Senior Player</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
                 <div class="flex flex-col items-center gap-5">
                     <div class="radial-progress text-[#4C8DF1] text-2xl font-extrabold"
                         style="--value:80; --size:8rem; --thickness: .8rem;" role="progressbar">80%</div>
-                    <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                    <h4 class="text-xl font-semibold">Training Ground</h4>
                     <p class="text-center max-w-60">Amet consectetur. Condimentum dignissim adip iscing .</p>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">Helmet for Hokey</h2>
+                        <h2 class="card-title text-xl font-extrabold">Cap for Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -302,7 +302,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">World Cup Flags Football</h2>
+                        <h2 class="card-title text-xl font-extrabold">Jursey for Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -321,7 +321,7 @@
                             <div class="flex gap-1"><img src="Images/icons/Frame-2.png" alt=""><span>20</span></div>
                             <div class="flex gap-1"><img src="Images/icons/Frame-3.png" alt=""><span>200</span></div>
                         </div>
-                        <h2 class="card-title text-xl font-extrabold">Jursey for Hokey</h2>
+                        <h2 class="card-title text-xl font-extrabold">Helmet For Hokey</h2>
                         <p>Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
                         <div class="">
                             <h3 class="text-xl font-extrabold text-pri-color">Price - $22.00</h3>
@@ -362,9 +362,9 @@
             <hr class="mt-9 mb-9">
             <div class="flex flex-col lg:flex-row p-8 gap-10 border-2 border-[#1313181a]">
                 <div class="">
-                    <div><img src="Images/11.png" alt=""></div>
+                    <div><img class="w-full" src="Images/11.png" alt=""></div>
                 </div>
-                <div class="">
+                <div class="text-xl font-bold">
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Our Equipment</div>
@@ -511,7 +511,7 @@
     </main>
     <hr class="mt-9 mb-9">
     <!-- footer section -->
-    <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff]">
+    <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff] hidden">
         <aside>
             <h3 class="footer-title">Get In Touch</h3>
             <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus
