--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                     class="w-full lg:w-1/2 p-3 lg:p-8 bg-slate-950 rounded-2xl ml-auto lg:-translate-y-48 lg:-translate-x-8">
                     <h3 class="mb-2 lg:mb-4 text-white text-xl lg:text-2xl font-extrabold">Meet all the heroes from the
                         field</h3>
-                    <p class="text-gray-500 text-sm lg:text-base font-semibold">New or returning to Hockey? Find out what type of hockey suits you, what each type is all about and where to play. Stic with hokey and get involve in delivering hokey.</p>
+                    <p class="text-gray-500 text-sm lg:text-base font-semibold">New or returning to Hockey? Find out
+                        what type of hockey suits you, what each type is all about and where to play. Stic with hokey
+                        and get involve in delivering hokey.</p>
                 </div>
             </div>
         </div>
@@ -135,7 +137,9 @@
         <!-- Professional Hockeys Club section -->
         <div class="max-w-xl mx-auto text-center">
             <h3 class="text-4xl font-extrabold mb-6">Professional Hockeys Club</h3>
-            <p class="font-semibold text-[#13131899]">The winner of the league qualifies for the Hockey League in the following season.144 teams and approximately 3200 players and 250 umpires and officials  participate in the league</p>
+            <p class="font-semibold text-[#13131899]">The winner of the league qualifies for the Hockey League in the
+                following season.144 teams and approximately 3200 players and 250 umpires and officials participate in
+                the league</p>
         </div>
         <hr class="mt-9 mb-9">
         <!-- Redial Progress -->
@@ -172,7 +176,9 @@
         <section>
             <div class="max-w-xl mx-auto text-center">
                 <h3 class="text-4xl font-extrabold mb-6">Program Sections</h3>
-                <p class="font-semibold text-[#13131899]">Hockey League is the pinnacle of club hockey in England. The league sits above the eight Area Leagues and has three tiers Premier Division; Division One - North and South; Conference East, Midlands, North, West.  </p>
+                <p class="font-semibold text-[#13131899]">Hockey League is the pinnacle of club hockey in England. The
+                    league sits above the eight Area Leagues and has three tiers Premier Division; Division One - North
+                    and South; Conference East, Midlands, North, West. </p>
             </div>
             <hr class="mt-9 mb-9">
             <div class="flex flex-col gap-6">
@@ -231,7 +237,9 @@
         <section>
             <div class="max-w-xl mx-auto text-center">
                 <h3 class="text-4xl font-extrabold mb-6">Our New Products</h3>
-                <p class="font-semibold text-[#13131899]">Got a game plan for us? We're all ears! Let's talk hockey drop us a line and join the team spirit. Puck yeah! Questions, cheers, or just wanna chat hockey? Hit us up! We're always happy to hear from you.</p>
+                <p class="font-semibold text-[#13131899]">Got a game plan for us? We're all ears! Let's talk hockey drop
+                    us a line and join the team spirit. Puck yeah! Questions, cheers, or just wanna chat hockey? Hit us
+                    up! We're always happy to hear from you.</p>
             </div>
             <hr class="mt-9 mb-9">
             <!-- cards -->
@@ -357,7 +365,8 @@
         <section>
             <div class="max-w-xl mx-auto text-center mb-9">
                 <h3 class="text-4xl font-extrabold mb-6">Clients Question</h3>
-                <p class="font-semibold text-[#13131899]">Coach Clint throws a thought-provoking hockey question your way - answer and join the discussion! </p>
+                <p class="font-semibold text-[#13131899]">Coach Clint throws a thought-provoking hockey question your
+                    way - answer and join the discussion! </p>
             </div>
             <hr class="mt-9 mb-9">
             <div class="flex flex-col lg:flex-row p-8 gap-10 border-2 border-[#1313181a]">
@@ -371,14 +380,16 @@
                         <div class="collapse-content">
                             <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Our Equipment</div>
                         <div class="collapse-content">
                             <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Hockey Training</div>
@@ -386,28 +397,32 @@
                             <p>Drills ignite muscle memory, blades carve ice symphonies, sweat paints our dedication
                                 building speed, skill, teamwork, one practice at a time. </p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Private Lessons</div>
                         <div class="collapse-content">
-                            <p>Whether beginner or bantam, we refine your skills and boost your confidence on  ice.</p>
+                            <p>Whether beginner or bantam, we refine your skills and boost your confidence on ice.</p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Ski Touring</div>
                         <div class="collapse-content">
                             <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                     <div class="collapse collapse-plus">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Booking</div>
                         <div class="collapse-content">
                             <p>Helmets gleaming, sticks honed, pucks flying - full gear, ready to charge!</p>
                         </div>
-                    </div><hr>
+                    </div>
+                    <hr>
                 </div>
             </div>
         </section>
@@ -416,7 +431,8 @@
         <section>
             <div class="max-w-xl mx-auto text-center mb-20">
                 <h3 class="text-4xl font-extrabold mb-6">Get In Touch</h3>
-                <p class="font-semibold text-[#13131899]">Ready to break the ice? Shoot us your queries, feedback, or high fives! We're on the same team.</p>
+                <p class="font-semibold text-[#13131899]">Ready to break the ice? Shoot us your queries, feedback, or
+                    high fives! We're on the same team.</p>
             </div>
             <div class="flex flex-col lg:flex-row gap-1 mb-12">
                 <!-- left side -->
@@ -511,7 +527,7 @@
     </main>
     <hr class="mt-9 mb-9">
     <!-- footer section -->
-    <footer class="footer p-10 lg:p-24 bg-[#131318] text-[#fff] hidden">
+    <footer class="footer p-10 lg:p-24 bg-[#d7d7e7] text-[#fff] hidden">
         <aside>
             <h3 class="footer-title">Get In Touch</h3>
             <p class="max-w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus
@@ -541,31 +557,29 @@
             <a class="link link-hover">Cookie policy</a>
         </nav>
     </footer>
-    <!-- <footer class="flex justify-between flex-col lg:flex-row p-10 lg:p-24 bg-[#131318] text-[#fff]">
-        <aside class="flex flex-col items-center  gap-3 border-2 border-blue-500">
+    <footer class="grid grid-cols-2 md:grid-cols-4 gap-10 p-10 lg:p-24 bg-[#131318] text-[#fff]">
+        <aside class="flex flex-col col-span-2 md:col-auto gap-3">
             <h3 class="footer-title">Get In Touch</h3>
-            <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+            <p>Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
             <div class="flex gap-2"><img src="Images/icons/mail.png" alt=""><span>hockeys@support.com</span></div>
             <div class="flex gap-2"><img src="Images/icons/call.png" alt=""><span>(+62) 123-321-543</span></div>
         </aside>
-        <div class="flex justify-between lg:gap-44">
-            <nav class="flex flex-col gap-3">
-                <header class="footer-title">Company</header>
-                <a class="link link-hover">Branding</a>
-                <a class="link link-hover">Marketing</a>
-                <a class="link link-hover">Advertisement</a>
-                <a class="link link-hover">News & Article</a>
-                <a class="link link-hover">Legal Notice</a>
-            </nav>
-            <nav class="flex flex-col gap-3">
-                <a class="footer-title">Support</a>
-                <a class="link link-hover">Help Center</a>
-                <a class="link link-hover">FAQs</a>
-                <a class="link link-hover">Ticket Support</a>
-                <a class="link link-hover">Contact Us</a>
-            </nav>
-        </div>
         <nav class="flex flex-col gap-3">
+            <header class="footer-title">Company</header>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+            <a class="link link-hover">News & Article</a>
+            <a class="link link-hover">Legal Notice</a>
+        </nav>
+        <nav class="flex flex-col gap-3">
+            <a class="footer-title">Support</a>
+            <a class="link link-hover">Help Center</a>
+            <a class="link link-hover">FAQs</a>
+            <a class="link link-hover">Ticket Support</a>
+            <a class="link link-hover">Contact Us</a>
+        </nav>
+        <nav class="flex flex-col gap-3 col-span-2 md:col-auto">
             <header class="footer-title">Services</header>
             <a class="link link-hover">AcademyGroup Lesson</a>
             <a class="link link-hover">Group Lesson</a>
@@ -573,7 +587,7 @@
             <a class="link link-hover">Hockeys for kids</a>
             <a class="link link-hover">Hockeys for Adult</a>
         </nav>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
